--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
             name: 'Unidas Podemos',
             color: '#8c2c8d',
             seats2023: 4,
-            seats2025: 2, // ejemplo: sin representación en 2025
+            seats2025: 4, 
             vote2025: null
           }
         ]
@@ -532,5 +532,6 @@
   </script>
 </body>
 </html>
+
 
 
