--- a/index.html
+++ b/index.html
@@ -218,6 +218,41 @@
       transform: translateY(1px);
     }
 
+    .pacto-meta {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      gap: 8px;
+      flex-wrap: wrap;
+      margin-bottom: 8px;
+      font-size: 12px;
+      color: #555;
+    }
+
+    .refresh-btn {
+      font-size: 13px;
+      padding: 6px 14px;
+      border-radius: 999px;
+      border: 1px solid #000;
+      background: #ffffff;
+      color: #000000;
+      cursor: pointer;
+      font-family: "Public Sans", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+      font-weight: 500;
+      display: inline-flex;
+      align-items: center;
+      gap: 6px;
+    }
+
+    .refresh-btn:hover {
+      background: #f0f0f0;
+    }
+
+    .refresh-btn:disabled {
+      opacity: 0.6;
+      cursor: default;
+    }
+
     @media (max-width: 600px) {
       .pactometro-widget {
         padding: 8px;
@@ -276,6 +311,13 @@
           Selecciona partidos para formar una mayoría.
         </div>
 
+        <div class="pacto-meta">
+          <span id="last-update-label">Última actualización: —</span>
+          <button type="button" class="refresh-btn" id="refresh-btn">
+            Actualizar datos
+          </button>
+        </div>
+
         <button type="button" class="reset-btn" id="reset-btn">
           Volver a empezar
         </button>
@@ -310,6 +352,8 @@
       const barSegmentsEl        = document.getElementById('bar-segments');
       const barTooltipEl         = document.getElementById('bar-tooltip');
       const resetBtnEl           = document.getElementById('reset-btn');
+      const lastUpdateLabelEl    = document.getElementById('last-update-label');
+      const refreshBtnEl         = document.getElementById('refresh-btn');
 
       if (!partyTableBodyEl || !partyListEl) {
         console.error('No se han encontrado los contenedores principales del pactómetro');
@@ -348,6 +392,24 @@
           .map(chk => chk.getAttribute('data-party-id'));
       }
 
+      function updateLastUpdateLabel(dateObj) {
+        if (!lastUpdateLabelEl) return;
+
+        if (!dateObj) {
+          lastUpdateLabelEl.textContent = 'Última actualización: —';
+          return;
+        }
+
+        const d = new Date(dateObj);
+        const timeStr = d.toLocaleTimeString('es-ES', {
+          hour: '2-digit',
+          minute: '2-digit',
+          second: '2-digit'
+        });
+        const dateStr = d.toLocaleDateString('es-ES');
+        lastUpdateLabelEl.textContent = 'Última actualización: ' + dateStr + ' ' + timeStr;
+      }
+
       // ===== CARGA DE DATOS DESDE SUPABASE =====
 
       async function loadDataFromSupabase(preserveSelection = true) {
@@ -356,7 +418,7 @@
         try {
           const { data: rows, error } = await supabase
             .from('pactometro_results')
-            .select('party_id, party_name, seats_2023, seats_2025, vote_pct_2025')
+            .select('party_id, party_name, seats_2023, seats_2025, vote_pct_2025, updated_at')
             .order('seats_2025', { ascending: false });
 
           if (error) {
@@ -376,12 +438,25 @@
               seats2023,
               seats2025,
               vote2025: typeof vote2025 === 'number' ? vote2025 : null,
-              diffSeats: seats2025 - seats2023
+              diffSeats: seats2025 - seats2023,
+              updatedAt: row.updated_at || null
             };
           });
 
           // Ordenar por escaños 2025 (desc)
           data.parties.sort((a, b) => b.seats2025 - a.seats2025);
+
+          // Actualizar indicador de última actualización (máximo updatedAt)
+          let lastUpdated = null;
+          data.parties.forEach(p => {
+            if (p.updatedAt) {
+              const d = new Date(p.updatedAt);
+              if (!lastUpdated || d > lastUpdated) {
+                lastUpdated = d;
+              }
+            }
+          });
+          updateLastUpdateLabel(lastUpdated);
 
           renderTable();
           renderPartyList(previouslySelected);
@@ -545,6 +620,24 @@
         resetBtnEl.addEventListener('click', resetSelection);
       }
 
+      // ===== REFRESCO MANUAL =====
+      async function handleRefreshClick() {
+        if (!refreshBtnEl) return;
+        const originalText = refreshBtnEl.textContent;
+        refreshBtnEl.disabled = true;
+        refreshBtnEl.textContent = 'Actualizando...';
+        try {
+          await loadDataFromSupabase(true);
+        } finally {
+          refreshBtnEl.disabled = false;
+          refreshBtnEl.textContent = originalText;
+        }
+      }
+
+      if (refreshBtnEl) {
+        refreshBtnEl.addEventListener('click', handleRefreshClick);
+      }
+
       // ===== COMUNICAR ALTURA AL PADRE (AUTO-RESIZE IFRAME) =====
       function sendHeightToParent() {
         const height = document.documentElement.scrollHeight;
@@ -559,9 +652,9 @@
       renderPartyList();
       updateTotals();
 
-      // Carga inicial desde Supabase y refresco cada 30 segundos
+      // Carga inicial desde Supabase y refresco automático cada 30 segundos
       loadDataFromSupabase(false);
-      setInterval(loadDataFromSupabase, 30000);
+      setInterval(() => loadDataFromSupabase(true), 30000);
 
       window.addEventListener('load', sendHeightToParent);
       window.addEventListener('resize', () => {
@@ -572,4 +665,5 @@
   </script>
 </body>
 </html>
+
 
