--- a/index.html
+++ b/index.html
@@ -285,7 +285,12 @@
   <div class="pactometro-widget" data-total-seats="65">
     <!-- BARRA SUPERIOR: TÍTULO + META (ARRIBA A LA DERECHA) -->
     <div class="pacto-top-bar">
-      <div class="pacto-header">Calculadora de pactos 21D</div>
+<div class="pacto-header-row">
+  <div class="pacto-header">Calculadora de pactos 21D</div>
+  <div class="pacto-last-update" id="pacto-last-update">
+    <!-- Aquí pondremos la última actualización -->
+  </div>
+</div>
       <div class="pacto-meta">
         <span id="last-update-label">Última actualización: —</span>
         <button type="button" class="refresh-btn" id="refresh-btn">
@@ -693,6 +698,7 @@
   </script>
 </body>
 </html>
+
 
 
 
