--- a/index.html
+++ b/index.html
@@ -279,6 +279,27 @@
         text-align: left;
       }
     }
+
+    .pacto-header-row {
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+  gap: 8px;
+  margin-bottom: 8px;
+  flex-wrap: wrap;
+}
+
+.pacto-header {
+  font-weight: 600;
+}
+
+.pacto-last-update {
+  font-size: 11px;
+  color: #666666;
+}
+
+
+    
   </style>
 </head>
 <body>
@@ -698,6 +719,7 @@
   </script>
 </body>
 </html>
+
 
 
 
